--- a/servicios.html
+++ b/servicios.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios | CoderHub</title>
+  <title>Servicios - CoderHub</title>
+  <link rel="icon" type="image/x-icon" href="img/CoderHubLogo.png">
   <link rel="stylesheet" href="css/styles.css">
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -47,7 +48,7 @@
       <!-- Servicio 1 -->
       <div class="col-md-4 mb-4">
         <div class="tarjeta-proyecto card h-100 shadow-sm animate__animated animate__fadeInUp animate__fast">
-          <img src="img/CoderHubText.png" class="card-img-top p-4" alt="Desarrollo Web"
+          <img src="img/DesWeb.jpg" class="card-img-top p-4" alt="Desarrollo Web"
             style="height:120px;object-fit:contain;">
           <div class="card-body text-center">
             <h5 class="card-title">Desarrollo Web</h5>
@@ -60,7 +61,7 @@
       <!-- Servicio 2 -->
       <div class="col-md-4 mb-4">
         <div class="tarjeta-proyecto card h-100 shadow-sm animate__animated animate__fadeInUp animate__fast">
-          <img src="img/CoderHubLogo.png" class="card-img-top p-4" alt="Consultoría"
+          <img src="img/ConsultaTecn.jpg" class="card-img-top p-4" alt="Consultoría"
             style="height:120px;object-fit:contain;">
           <div class="card-body text-center">
             <h5 class="card-title">Consultoría Tecnológica</h5>
@@ -73,7 +74,7 @@
       <!-- Servicio 3 -->
       <div class="col-md-4 mb-4">
         <div class="tarjeta-proyecto card h-100 shadow-sm animate__animated animate__fadeInUp animate__fast">
-          <img src="img/CoderHub.png" class="card-img-top p-4" alt="Capacitación"
+          <img src="img/CapacitacionYTalleres.jpg" class="card-img-top p-4" alt="Capacitación"
             style="height:120px;object-fit:contain;">
           <div class="card-body text-center">
             <h5 class="card-title">Capacitación y Talleres</h5>
@@ -110,9 +111,9 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
-        
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+
   <!-- Iconos de Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </body>
